--- a/style.css
+++ b/style.css
@@ -11,13 +11,16 @@
         --secondc: hsl(300, 24%, 96%);
         --h6: hsl(333, 80%, 67%);
         --headerp: hsl(303, 10%, 53%);
+        --guide: .01rem solid black;
     }
 
     body{
-        min-height: 100vh;
+        min-height:100vh;
+        max-width: 100vw;
         background-color: white;
         background: url("images/bg-pattern-top-mobile.svg") left top no-repeat , url("images/bg-pattern-bottom-mobile.svg") right bottom no-repeat;
-        padding: 6.5vh 7vw;
+        margin:0;
+        padding: 5.5rem 2.7rem;
         display: grid;
         justify-content: center;
         align-items: center;
@@ -64,7 +67,7 @@
 /* Sub-Containers III */
     h1{
         color: var(--mainc);
-        font-size: clamp(1.5rem,8.4vw,4.8rem);
+        font-size: clamp(1.5rem,8.4vw,4rem);
     }
 
     header p{
@@ -153,18 +156,20 @@
     }
 
 /* Media Queries */
-@media screen and (orientation:landscape){
+@media screen and (orientation:landscape) and (min-width:1000px){
 /* Main Containers */
     body{
         background: url("images/bg-pattern-top-desktop.svg") left top no-repeat , url("images/bg-pattern-bottom-desktop.svg") right bottom no-repeat;
         background-size: auto 38% , 90% 85%;
-        padding: 5.5vh 10vw;
+        padding: 3.5rem 10.5rem 0 10.5rem;
+
     }
 
 /* Sub-Containers I */
     main{
         grid-template-columns: repeat(2,minmax(45rem,130rem));
         grid-template-rows: repeat(2, 50%);
+        row-gap:6rem;
         grid-template-areas:"header fivestars"
                             "testimony testimony";
     }
@@ -176,24 +181,26 @@
 
     header{
         text-align: left;
-        padding-right: 9rem;
+        padding-right: 14rem;
     }
 
     .fivestars{
+        margin-top: 4rem;
         margin-left:9rem;
         text-align: left;
         row-gap: .1rem;
     }
 
     .testimony{
-        padding-top: 5rem;
         flex-direction: row;
-        column-gap: 3rem;
+        justify-content: space-between;
+        column-gap:3rem;
     }
 
 /* Sub-Containers III */
     h1{
-        margin:0 0 -.5rem 0;
+        padding:0 0 -.5rem 0;
+        font-size: 4.8rem;
     }
 
     header p{
@@ -216,9 +223,9 @@
     }
 
     .review{
-        height: 26rem;
-        width:clamp(44rem, 25vw, 100%);
-        padding-right: 4.2rem;
+        padding-right: 4.5rem;
+        width:36rem;
+        height:25rem;
     }
 
     .ir{
@@ -235,12 +242,9 @@
     }
 
     .review p{
+        font-size:clamp(1rem,1.1vw,1.26rem);
         line-height:2.3rem;
     }
-
-/* Sub-Containers V */
-
-/* Pseudo-Elements */
 
 }
 
